Name:           linux-xattr
Version:        0.1.0.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      © 2013-2014 Nicola Squartini
Author:         Nicola Squartini
Maintainer:     Nicola Squartini <tensor5@gmail.com>
Bug-Reports:    mailto:tensor5@gmail.com
Synopsis:       Read, set and list extended attributes
Category:       System
Description:

  Bindings to the Linux syscalls for reading and manipulating extended
  attributes (@setxattr@, @getxattr@, @listxattr@, ...).

Extra-Source-Files:
  CHANGELOG.md
  README.md

Library
  Build-Depends:        base == 4.*,
                        bytestring == 0.10.*
  Ghc-Options:          -Wall
  Exposed-Modules:      System.Linux.XAttr
